<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioDeSesion2"
    android:background="@drawable/slpashcastlvania">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="240dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/sesion"
            android:fontFamily="@font/star"
            android:textAlignment="center"
            android:layout_marginTop="150dp"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingresa"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="text"
                android:paddingStart="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:paddingStart="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/olvido"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnconcuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80sp"
                android:textColor="@color/white"
                android:background="@drawable/botondeingreso"
                android:text="@string/ingres"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btncrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80sp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80sp"
                android:textColor="@color/white"
                android:background="@drawable/botondeingreso"
                android:text="@string/btn_inisiosesion_crear"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>