<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formulario"
    android:background="@drawable/menucastlevania">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="25dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formuarioregistro"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="50sp"
            android:textColor="@color/white"
            android:fontFamily="@font/star"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:textColor="@color/white"
                android:text="@string/nombrerg" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:textColor="@color/black"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:textColor="@color/white"
                android:text="@string/NombreUsuario" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:textColor="@color/white"
                android:text="@string/correoRg" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:inputType="text"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:textColor="@color/white"
                android:text="@string/contraseñaRg" />

            <EditText
                android:id="@+id/editTextText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:textColor="@color/white"
                android:text="@string/ConfircontraseñaRg" />

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50sp"
                android:layout_marginStart="50sp"
                android:background="@drawable/espaciosregistro"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

=                <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnregistrarseform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="50sp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/botondeingreso"
                android:text="@string/registrarRg"
                android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnvolverform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="80dp"
                    android:background="@drawable/botondeingreso"
                    android:text="@string/btn_form_atras"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>